<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_scan"
        android:title="@string/scan"
        android:icon="@drawable/ic_qr_code_scanner_black_24dp" />

    <item
        android:id="@+id/menu_generate"
        android:title="@string/menu_generate"
        android:icon="@drawable/ic_edit_black_24dp" />
    <item
        android:id="@+id/menu_favorite"
        android:title="@string/favorite"
        android:icon="@drawable/ic_favorite_border_black_24dp" />

    <item
        android:id="@+id/menu_history"
        android:title="@string/menu_history"
        android:icon="@drawable/ic_history_black_24dp" />

    <item
        android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        android:icon="@drawable/ic_settings_black_24dp" />

</menu>