<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/dimen_8dp"
    android:paddingBottom="@dimen/dimen_16dp"
    android:orientation="vertical"
    >

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        style="@style/TextInputLayoutStyle"
        >
        <EditText
            android:id="@+id/edit_text_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|top"
            android:lines="1"
            android:maxLines="1"
            android:hint="@string/title"
            android:imeOptions="actionDone"
            android:inputType="text"
            style="@style/EditTextStyle"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        style="@style/TextInputLayoutStyle"
        >
        <EditText
            android:id="@+id/edit_text_organizer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|top"
            android:lines="1"
            android:maxLines="1"
            android:hint="@string/organizer"
            android:imeOptions="actionNext"
            android:inputType="text"
            style="@style/EditTextStyle"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        style="@style/TextInputLayoutStyle"
        >
        <EditText
            android:id="@+id/edit_text_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|top"
            android:lines="1"
            android:maxLines="1"
            android:hint="@string/location"
            android:imeOptions="actionNext"
            android:inputType="text"
            style="@style/EditTextStyle"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.qr.scanner.CustomWidgets.DateTimePickerButton
        android:id="@+id/button_date_time_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:paddingHorizontal="@dimen/dimen_4dp"
        app:hint="@string/start_time"
        />

    <com.qr.scanner.CustomWidgets.DateTimePickerButton
        android:id="@+id/button_date_time_end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:paddingHorizontal="@dimen/dimen_4dp"
        app:hint="@string/end_time"
        />

    <RelativeLayout
        android:id="@+id/generateQrcode"
        android:layout_width="@dimen/dimen_200dp"
        android:layout_height="@dimen/dimen_40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dimen_70dp"
        android:background="@drawable/circle_button_background"
        android:elevation="@dimen/dimen_8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/generate_qrcode"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_18dp"
            android:textStyle="bold" />

    </RelativeLayout>
</LinearLayout>
