<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/dimen_16dp"
    android:paddingTop="@dimen/dimen_8dp"
    android:paddingBottom="@dimen/dimen_16dp">

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_text_phone"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="+0123456789"
                android:gravity="start|top"
                android:hint="@string/phone"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:lines="1"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10dp">

            <EditText
                android:id="@+id/edit_text_message"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|top"
                android:hint="@string/message"
                android:imeOptions="actionDone"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/generateQrcode"
        android:layout_width="@dimen/dimen_200dp"
        android:layout_height="@dimen/dimen_40dp"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:background="@drawable/circle_button_background"
        android:elevation="@dimen/dimen_8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/generate_qrcode"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_18dp"
            android:textStyle="bold" />

    </RelativeLayout>
</RelativeLayout>