<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".dialog.CameraDialog"
    android:orientation="vertical"
    android:paddingStart="@dimen/dimen_5dp"
    android:paddingTop="@dimen/dimen_10dp"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/dimen_20dp"
        android:text="@string/select_camera"
        android:gravity="center"
        android:textStyle="bold"
        android:paddingStart="@dimen/dimen_10dp"
        android:paddingTop="@dimen/dimen_5dp"
        android:textColor="@color/black"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:layout_marginTop="@dimen/dimen_10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_10dp"
            android:paddingTop="@dimen/dimen_16dp"
            android:paddingBottom="@dimen/dimen_16dp"
            android:textSize="@dimen/dimen_16dp"
            android:text="@string/back"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:layout_alignParentStart="true"
            />

        <RadioButton
            android:id="@+id/backRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@null"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/dimen_20dp"

            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_10dp"
            android:paddingTop="@dimen/dimen_16dp"
            android:paddingBottom="@dimen/dimen_16dp"
            android:textSize="@dimen/dimen_16dp"
            android:text="@string/front"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:layout_alignParentStart="true"
            />
        <RadioButton
            android:id="@+id/frontRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@null"
            android:layout_marginEnd="@dimen/dimen_20dp"
            android:layout_centerVertical="true"
            />

    </RelativeLayout>

</LinearLayout>